2003-02-23  Ben Wing  <ben@xemacs.org>

	* eval.c (unbind_to_hairy):
	damn those off-by-one errors.

2003-02-21  Ben Wing  <ben@xemacs.org>

	* redisplay.c:
	* redisplay.c (run_post_redisplay_actions):
	Don't get in an infinite loop running post-redisplay actions.

2003-02-20  Ben Wing  <ben@xemacs.org>

	* alloc.c:
	* alloc.c (garbage_collect_1):
	Make gc_currently_forbidden static.
	
	* config.h.in:
	* lisp.h:
	Move some stuff to lisp.h.

	* console-gtk.h:
	* console-impl.h:
	* console-impl.h (struct console_methods):
	* console-msw.h:
	* console-x.h:
	* event-Xt.c (emacs_Xt_handle_magic_event):
	* event-msw.c (emacs_mswindows_drain_queue):
	* event-msw.c (mswindows_handle_paint):
	* event-msw.c (emacs_mswindows_event_pending_p):
	* redisplay-gtk.c:
	* redisplay-gtk.c (gtk_clear_to_window_end):
	* redisplay-msw.c:
	* redisplay-msw.c (mswindows_redisplay_deadbox):
	* redisplay-msw.c (mswindows_clear_region):
	* redisplay-msw.c (mswindows_clear_frame):
	* redisplay-msw.c (console_type_create_redisplay_mswindows):
	* redisplay-output.c:
	* redisplay-output.c (redisplay_output_window):
	* redisplay-output.c (redisplay_redraw_exposed_window):
	* redisplay-output.c (redisplay_redraw_exposed_area):
	* redisplay-x.c:
	* redisplay-x.c (x_generate_shadow_pixels):
	* gtk-xemacs.c (gtk_xemacs_paint):
	* gtk-xemacs.c (gtk_xemacs_expose):
	Remove duplicated code to redraw exposed area.  Add deadbox
	method needed by the generalized redraw code.  Defer redrawing
	if already in redisplay.

	* frame-msw.c (mswindows_set_frame_size):
	* event-stream.c (event_stream_drain_queue):
	* event-stream.c (detect_input_pending):
	* event-stream.c (Finput_pending_p):
	* event-stream.c (event_stream_quit_p):
	* event-stream.c (run_pre_idle_hook):
	* event-stream.c (Fdiscard_input):
	* frame.c:
	Add comments about calling Lisp.
	
	* debug.c:
	* debug.c (FROB):
	* debug.c (syms_of_debug):
	* general-slots.h:
	Move generalish symbols to general-slots.h.
	
	* doprnt.c (get_doprnt_args):